# nRF52840-Bluetooth-Sensor-Hub

./: .gitignore  CMakeLists.txt  README.md  README.txt  app.overlay  auto_deploy.bat  build.bat  error_analysis.md  fix.py  index.html  plan.md  prj.conf  web_ui_concept.md
.kilo/plans/: 1778664516892-stellar-otter.md  1778935768852-jolly-harbor.md  1778965426026-stellar-moon.md  ai-assistant-architecture.md
docs/: linkedin-showcase.md  linkedin-showcase_nrf52.html
plans/: analysis_and_optimization.md
src/: adpcm.c  adpcm.h  audio_stream.c  audio_stream.h  font8x16.h  font8x8.h  main.c  qrcodegen.c  qrcodegen.h
tools/: action_executor.py  ai_client.py  audio_buffer.py  ble_audio_receiver.py  ble_client.py  browser_controller.py  intent_parser.py  requirements.txt  server.py  stt_engine.py  system_controller.py
